# incaes

./: .clangd  .gitignore  README.md  meson.build
examples/: aes128_example.c  meson.build
include/: aes.h  cipher.h  def.h  helper.h
include/incaes/: aes.h  aes_table.h  cipher.h  def.h  helper.h  key_expansion.h  rijndael.h
src/: aes.c  cipher.c  helper.c  key_expansion.c  meson.build  rijndael.c
src/internal/: aes_table.h  cipher.h  helper.h  key_expansion.h  math.h
test/: aes_cipher_test.c  aes_e2e_test.c  aes_kat_test.c  meson.build  test.h
